--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudhub-pdf",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Components for generating pdf reports ",
   "main": "dist/index.js",
   "files": [
@@ -8,10 +8,11 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "NODE_ENV=development npx babel src --config-file ./babel.config.json --out-dir dist"
+    "build": "NODE_ENV=development npx babel src --config-file ./babel.config.json --copy-files --out-dir dist"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.3"
+    "@react-pdf/renderer": "^1.6.3",
+    "himalaya": "^1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.2.0",
