--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,11 @@
 {
   "parser": "babel-eslint",
+  "extends": ["airbnb"],
+  "plugins": ["react", "import", "baseui"],
   "env": {
     "es6": true,
     "browser": true
   },
-  "extends": ["react-app", "prettier"],
-  "plugins": ["prettier"],
   "settings": {
     "import/resolver": {
       "node": {
@@ -15,8 +15,48 @@
     }
   },
   "rules": {
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".js", ".jsx"]
+      }
+    ],
     "comma-dangle": "off",
     "no-console": "off",
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "jsx-a11y/label-has-for": 0,
+    "jsx-a11y/anchor-is-valid": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/media-has-caption": 0,
+    "jsx-a11y/label-has-associated-control": 0,
+    "function-paren-newline": "off",
+    "no-underscore-dangle": "off",
+    "no-case-declarations": "off",
+    "no-use-before-define": "off",
+    "no-restricted-globals": "off",
+    "no-empty": "off",
+    "no-shadow": 0,
+    "max-len": 0,
+    "indent": 0,
+    "space-before-function-paren": "off",
+    "import/no-extraneous-dependencies": "off",
+    "import/no-named-as-default": "off",
+    "react/forbid-prop-types": 0,
+    "react/no-unused-prop-types": 0,
+    "react/prop-types": 0,
+    "react/jsx-indent-props": 0,
+    "react/jsx-indent": 0,
+    "react/no-did-update-set-state": 0,
+    "react/destructuring-assignment": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "import/no-cycle": "error",
+    "import/no-self-import": "error",
+    "import/no-unresolved": "off",
+    "arrow-parens": 0,
+    "object-curly-newline": 0,
+    "implicit-arrow-linebreak": 0,
+    "operator-linebreak": 0,
+    "no-confusing-arrow": 0,
+    "no-continue": 0
   }
 }
