--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudhub-pdf",
-  "version": "1.0.15",
+  "version": "1.0.16",
   "description": "Components for generating pdf reports ",
   "main": "dist/index.js",
   "files": [
@@ -12,9 +12,13 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^1.6.3",
+    "canvas": "^2.9.0",
     "detect-node": "^2.0.5",
     "himalaya": "^1.1.0",
-    "material-ui-colors": "^1.0.0"
+    "is-node": "^1.0.2",
+    "jsbarcode": "^3.11.5",
+    "material-ui-colors": "^1.0.0",
+    "qrcode": "^1.5.0"
   },
   "devDependencies": {
     "@babel/cli": "7.2.0",
@@ -25,17 +29,17 @@
     "@babel/preset-env": "7.2.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
-    "babel-plugin-transform-imports": "^2.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "2.2.1",
     "babel-eslint": "10.0.1",
-    "eslint-config-airbnb": "17.1.0",
+    "babel-plugin-transform-imports": "^2.0.0",
     "eslint": "5.16.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-baseui": "9.112.0",
     "eslint-plugin-import": "2.17.3",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "7.13.0"
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "7.13.0",
+    "prettier": "2.2.1"
   },
   "keywords": [],
   "author": "Bernard Gaitho <gaithoben@gmail.com> (http://github.com/gaithoben)",
