--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "is-node": "^1.0.2",
     "jsbarcode": "^3.11.5",
     "material-ui-colors": "^1.0.0",
+    "number-to-words": "^1.2.4",
+    "numeral": "^2.0.6",
     "qrcode": "^1.5.0"
   },
   "devDependencies": {
@@ -28,8 +30,12 @@
     "@babel/preset-env": "7.2.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
+    "@types/node": "^18.14.2",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "babel-eslint": "10.0.1",
     "babel-plugin-transform-imports": "^2.0.0",
+    "dayjs": "^1.11.7",
     "eslint": "5.16.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "^8.1.0",
@@ -40,8 +46,6 @@
     "eslint-plugin-react": "7.13.0",
     "prettier": "2.2.1",
     "react": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
     "typescript": "4.7.4"
   },
   "keywords": [],
